--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,3 +2,17 @@ resources:
   db: h2
   logs: C:\temp\logs\
   secure: false
+spring:
+  datasource:
+    url: jdbc:h2:mem:retailkart
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        show_sql: true
+        use_sql_comments: true
+        format_sql: true
