--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -10,9 +10,13 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create-only
     properties:
       hibernate:
         show_sql: true
         use_sql_comments: true
         format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /db-console
